--- a/package.json
+++ b/package.json
@@ -1,19 +1,42 @@
 {
-  "name": "penpot-plugin-starter-template",
+  "name": "penpot-ai-design-generator",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "description": "AI-powered design generator plugin for Penpot using LM Studio",
   "scripts": {
     "dev": "vite build --watch",
-    "build": "tsc && vite build"
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@penpot/plugin-styles": "1.3.2",
-    "@penpot/plugin-types": "1.3.2"
+    "@penpot/plugin-types": "^1.3.2"
   },
   "devDependencies": {
-    "typescript": "^5.8.3",
+    "@types/node": "^24.3.1",
+    "typescript": "^5.3.0",
     "vite": "^7.0.5",
     "vite-live-preview": "^0.3.2"
+  },
+  "files": [
+    "dist/",
+    "manifest.json"
+  ],
+  "keywords": [
+    "penpot",
+    "plugin",
+    "ai",
+    "design",
+    "generator",
+    "lm-studio",
+    "typescript"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
+  "penpot": {
+    "name": "AI Design Generator",
+    "description": "Generate designs automatically using AI (LM Studio)",
+    "icon": "🎨"
   }
 }
