--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
       "./node_modules/@types",
       "./node_modules/@penpot"
     ],
-    "types": ["node","plugin-types"],
+    "types": [ "plugin-types"],
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
