--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
   "author": "Your Name",
   "email": "your.email@example.com",
   "license": "MIT",
-  "icon": "🎨",
+  "icon": "./app.ico",
   "permissions": [
     "content:read",
     "content:write",
